--- a/mystyle.css
+++ b/mystyle.css
@@ -43,7 +43,7 @@ img {
 	display: flex;
 	margin-left: auto;
 	margin-right: auto;
-	align-items: flex-end;
+	align-items: center;
 	width: 90%;
 }
 
