--- a/mystyle.css
+++ b/mystyle.css
@@ -12,16 +12,53 @@ h1 {
   color:#EEEEEE;
   margin-left: 15px;
   font-family: Quando;
-  font-size: 38px;
+  font-size: 37px;
+  margin-bottom: -8px;
+}
+
+h2 {
+	color:#EEEEEE;
+	margin-left: 0px;
+	font-family: Quando;
+	font-size: 30px;
 }
 
 p {
 	color:#EEEEEE;
-	margin-left: 50px;
+	margin-left: 0px;
 }
 
-img {
+#img-home {
 	margin-left: 50px;
+	width: 11%;
+}
+
+.header-button {
+	border: none;
+	background-color: #000000;
+	color: #EEEEEE;
+	padding: 0px 26px;
+	font-size: 22px;
+	float: left;
+	transition-duration: 0.2s;
+	cursor: pointer;
+	font-family: SourceSansPro;
+}
+
+.header-button:hover {
+	background-color: #7F7F7F;
+	cursor: grab;
+}
+
+.header-button-disabled {
+	border: none;
+	color: white;
+	background-color: #3D3D3D;
+	padding: 0px 26px;
+	font-size: 22px;
+	float: left;
+	opacity: 0.9;
+	font-family: SourceSansPro;
 }
 
 #container-video-reel {
@@ -34,10 +71,6 @@ img {
 	width: 60%;
 }
 
-#container {
-    display: flex;
-}
-
 #container-header-home {
 	padding: 0px;
 	display: flex;
@@ -47,8 +80,23 @@ img {
 	width: 90%;
 }
 
+#container-header-block {
+	display: flex;
+	margin-left: auto;
+	margin-right: auto;
+	
+}
+
 #container-header-text {
 	display: normal;
-	align-items: normal;
+	align-items: flex-start;
 	padding: 0px;
+	color: #FFFFFF;
+}
+
+#container-header-div {
+	display: normal;
+	align-items: center;
+	padding: 0px;
+	color: #D9D9D9;
 }
