--- a/mystyle.css
+++ b/mystyle.css
@@ -28,6 +28,22 @@ p {
 	margin-left: 0px;
 }
 
+#container-disclaimer-text {
+	text-align:center;
+	color:#EEEEEE;
+	margin-top: -10px;
+	margin-bottom: -10px;
+}
+
+.header {
+	top: 0;
+	position: sticky;
+	z-index: 1;
+	background-color: #222222;
+	margin-bottom: 0px;
+
+}
+
 #img-home {
 	margin-left: 50px;
 	width: 11%;
@@ -63,11 +79,12 @@ p {
 
 #container-video-reel {
 	width: 500px;
-	padding: 50px;
+	padding: 0px;
 	text-align: center;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: -15px;
 	width: 60%;
 }
 
@@ -76,6 +93,7 @@ p {
 	display: flex;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: -10px;
 	align-items: center;
 	width: 90%;
 }
