--- a/mystyle.css
+++ b/mystyle.css
@@ -39,7 +39,7 @@ p {
 	align-items: center;
 }
 .header-hero-text-and-div {
-	width:70%;
+	width: 100%;
 }
 
 #container-header-text {
@@ -48,8 +48,8 @@ p {
 	color: #FFFFFF;
 }
 #container-header-hr {
-	align-items: center;
 	color: #D9D9D9;
+	margin-right: 10em;
 }
 #img-home {
 	margin-left: 3.25em;
@@ -133,6 +133,7 @@ p {
 }
 .content-quick-link-div {
 	margin: 0em 0em 0em 0em;
+	display: flex;
 	column-count: 4;
 	column-gap: .8em;
 }
@@ -140,6 +141,8 @@ p {
 .content-quick-link-box {
 	overflow: clip;
 	text-align: center;
+	margin-left: .4em;
+	margin-right: .4em;
 	padding: .2em;
 	border: .1em;
 	border-color: #EEEEEE;
