--- a/mystyle.css
+++ b/mystyle.css
@@ -1,203 +1,421 @@
+/*Shared formattin*/
 @font-face {  font-family: Quando; src: url(fonts/Quando-Regular.ttf); format("truetype"); }
 @font-face {  font-family: SourceSansPro; src: url(fonts/SourceSansPro-Regular.ttf); format("truetype"); }
 @font-face {  font-family: Montserrat; src: url(fonts/Montserrat-Regular.ttf); format("truetype"); }
 
-body {
-  background-color:#000000;
-  font-family: SourceSansPro;
-  font-size: 20px;
-}
-h1 {
-  color:#EEEEEE;
-  margin-left: 15px;
-  margin-bottom: -8px;
-  font-family: Quando;
-  font-size: 1.8em;
-}
-h2 {
-	color:#EEEEEE;
-	font-family: Quando;
-	font-size: 1.5em;
-}
-h3 {
-	color:#EEEEEE;
-	font-family: Montserrat;
-	font-size: 1.4em;
-}
-p {
-	color:#EEEEEE;
+
+/*Desktop Formatting*/
+@media (min-width: 481px) {
+	body {
+	  background-color:#000000;
+	  font-family: SourceSansPro;
+	  font-size: 20px;
+	}
+	h1 {
+	  color:#EEEEEE;
+	  margin-left: 15px;
+	  margin-bottom: -8px;
+	  font-family: Quando;
+	  font-size: 1.8em;
+	}
+	h2 {
+		color:#EEEEEE;
+		font-family: Quando;
+		font-size: 1.5em;
+	}
+	h3 {
+		color:#EEEEEE;
+		font-family: Montserrat;
+		font-size: 1.4em;
+	}
+	p {
+		color:#EEEEEE;
+	}
+
+	.content{
+		max-width: 1600px;
+		margin: auto;
+		min-width:60em;
+		width: auto !important;/* Firefox will set width as auto */
+		width:1000px;          /* As IE6 ignores !important it will set width as 1000px; */
+	}
+
+	.undecorated-links {
+		text-decoration:none;
+	}
+	.header-hero {
+		top: 0;
+		background-color: #000000;
+		display: flex;
+		margin: -0.5em auto 0em 3em;
+		align-items: center;
+	}
+	.header-hero-text-and-div {
+		width: 100%;
+	}
+
+	#container-header-text {
+		display: normal;
+		align-items: flex-start;
+		color: #FFFFFF;
+	}
+	#container-header-hr {
+		color: #D9D9D9;
+		margin-right: 10em;
+	}
+	#img-home {
+		margin-left: 3.25em;
+		margin-top: .5em;
+		width: 5.70em;
+		padding: .4em;
+	}
+	
+	
+	#img-twitter-header {
+		width: 1.1em;
+		padding: 0em .1em 0em .1em;
+	}
+	#img-twitter-footer {
+		width: 1.1em;
+		padding: 0em .1em 0em .1em;
+	}
+	#img-linkedin-header {
+		width: 1.1em;
+		padding: 0em .1em 0em .1em;
+	}
+	#img-linkedin-footer {
+		width: 1.1em;
+		padding: 0em .1em 0em .1em;
+	}
+	#img-bandcamp-header {
+		width: 1.1em;
+		padding: 0em .1em 0em .1em;
+	}
+	#img-bandcamp-footer {
+		width: 1.1em;
+		padding: 0em .1em 0em .1em;
+	}
+	#img-tumblr-header {
+		width: 1.1em;
+		padding: 0em .1em 0em .1em;
+	}
+	#img-tumblr-footer {
+		width: 1.1em;
+		padding: 0em .1em 0em .1em;
+	}
+	
+	#img-quicklink-prev {
+		width: 8em;
+		padding: .1em .1em .1em .1em;
+		border: 10px;
+		border-color: #555555;
+	}
+	#img-bio {
+		width: 15em;
+		padding: 1em .1em 1em .1em;
+		border: 10px;
+		border-color: #555555;
+	}
+
+
+	.header-sidekick {
+		position: sticky;
+		top: 0;
+		z-index: 1;
+		margin: -1.25em 0em 3em 13.5em;
+		background-color: #222222;
+	}
+	.header-sidekick-buttons{
+		width:70%;
+	}
+	.header-button {
+		border: none;
+		background-color: #000000;
+		color: #EEEEEE;
+		padding: 0px 26px;
+		font-size: 22px;
+		float: left;
+		transition-duration: 0.2s;
+		font-family: SourceSansPro;
+	}
+	.header-button:hover {
+		background-color: #7F7F7F;
+		cursor: pointer;
+	}
+	.header-button-disabled {
+		border: none;
+		color: white;
+		background-color: #3D3D3D;
+		padding: 0px 26px;
+		font-size: 22px;
+		float: left;
+		font-family: SourceSansPro;
+	}
+	.header-sidekick-links {
+		margin-right: 10em;
+		float: right;
+	}
+
+	.main_hr {
+		width: 80%;
+	}
+	.content-normal-div {
+		margin: 1em 7em 1em 7em;
+	}
+	.content-quick-link-div {
+		margin: 0em 0em 0em 0em;
+		display: flex;
+	}
+
+	.content-quick-link-box {
+		overflow: clip;
+		text-align: center;
+		margin-left: .4em;
+		margin-right: .4em;
+		padding: .2em;
+		border: .1em solid #EEEEEE;
+		background-color: #444444;
+	}
+	.content-bio-div {
+		margin: 1em 7em 1em 7em;
+		column-count: 2;
+		column-gap: 2em;
+	}
+
+	#container-video-reel {
+		padding: 0px;
+		text-align: center;
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: -15px;
+		width: 60%;
+	}
+	#container-disclaimer-text {
+		text-align:center;
+		display: block;
+		color:#EEEEEE;
+		margin-top: 0px;
+		margin-bottom: 0px;
+	}
+
+	.footer-main {
+		text-align: center;
+	}
+	.footer-links {
+		float: none;
+	}
+
+	.project-div {
+		margin: 1em 7em 2em 7em;
+		column-count: 2;
+		column-gap: 2em;
+	}
+	.project-title {
+		margin: 1em 7em 1em 4.6em;
+	}
+	.project-content-left {
+	}
+	.project-content-right {
+	}
+
+	.img-reascript-gif {
+		width: 450px;
+	}
 }
 
-.content{
-	max-width: 1600px;
-	margin: auto;
-	min-width:60em;
-	width: auto !important;/* Firefox will set width as auto */
-	width:1000px;          /* As IE6 ignores !important it will set width as 1000px; */
-}
+/****************************/
+/****************************/
 
-.undecorated-links {
-	text-decoration:none;
-}
-.header-hero {
-	top: 0;
-	background-color: #000000;
-	display: flex;
-	margin: -0.5em auto 0em 3em;
-	align-items: center;
-}
-.header-hero-text-and-div {
-	width: 100%;
-}
+/*Mobile formatting*/
+@media (max-width: 481px) {
+	body {
+	  background-color:#000000;
+	  font-family: SourceSansPro;
+	  font-size: 16px;
+	}
+	h1 {
+	  color:#EEEEEE;
+	  margin-left: 12px;
+	  margin-bottom: -6px;
+	  font-family: Quando;
+	  font-size: 1.8em;
+	}
+	h2 {
+		color:#EEEEEE;
+		font-family: Quando;
+		font-size: 1.5em;
+	}
+	h3 {
+		color:#EEEEEE;
+		font-family: Montserrat;
+		font-size: 1.4em;
+	}
+	p {
+		color:#EEEEEE;
+	}
 
-#container-header-text {
-	display: normal;
-	align-items: flex-start;
-	color: #FFFFFF;
-}
-#container-header-hr {
-	color: #D9D9D9;
-	margin-right: 10em;
-}
-#img-home {
-	margin-left: 3.25em;
-	margin-top: .5em;
-	width: 5.70em;
-	padding: .4em;
-}
-#img-twitter {
-	width: 1.1em;
-	padding: 0em .1em 0em .1em;
-}
-#img-linkedin {
-	width: 1.1em;
-	padding: 0em .1em 0em .1em;
-}
-#img-bandcamp {
-	width: 1.1em;
-	padding: 0em .1em 0em .1em;
-}
-#img-tumblr {
-	width: 1.1em;
-	padding: 0em .1em 0em .1em;
-}
-#img-quicklink-prev {
-	width: 8em;
-	padding: .1em .1em .1em .1em;
-	border: 10px;
-	border-color: #555555;
-}
-#img-bio {
-	width: 15em;
-	padding: 1em .1em 1em .1em;
-	border: 10px;
-	border-color: #555555;
-}
+	.content{
+		margin: auto;
+		width: auto !important;/* Firefox will set width as auto */
+	}
+	.undecorated-links {
+		text-decoration:none;
+	}
+	.header-hero {
+		top: 0;
+		background-color: #000000;
+		display: flex;
+		margin: 0em auto 0em 0em;
+		align-items: center;
+	}
+	.header-hero-text-and-div {
+		width: 100%;
+	}
+
+	#container-header-text {
+		display: normal;
+		align-items: flex-start;
+		color: #FFFFFF;
+	}
+	#container-header-hr {
+		color: #D9D9D9;
+		margin-right: .5em;
+	}
+	#img-home {
+		margin-left: 0em;
+		margin-top: .5em;
+		width: 4em;
+		padding: .4em;
+	}
+
+	#img-twitter-footer {
+		width: 1.0em;
+		padding: 0em .1em 0em .1em;
+	}
+	#img-linkedin-footer {
+		width: 1.0em;
+		padding: 0em .1em 0em .1em;
+	}
+	#img-bandcamp-footer {
+		width: 1.0em;
+		padding: 0em .1em 0em .1em;
+	}
+	#img-tumblr-footer {
+		width: 1.0em;
+		padding: 0em .1em 0em .1em;
+	}
+
+	#img-quicklink-prev {
+		width: 8em;
+		padding: .1em .1em .1em .1em;
+		border: 10px;
+		border-color: #555555;
+	}
+	#img-bio {
+		padding: 0.5em .1em 0.5em .1em;
+		border: 10px #555555;
+		
+	}
 
 
-.header-sidekick {
-	position: sticky;
-    top: 0;
-	z-index: 1;
-	margin: -1.25em 0em 3em 13.5em;
-	background-color: #222222;
-}
-.header-sidekick-buttons{
-	width:70%;
-}
-.header-button {
-	border: none;
-	background-color: #000000;
-	color: #EEEEEE;
-	padding: 0px 26px;
-	font-size: 22px;
-	float: left;
-	transition-duration: 0.2s;
-	font-family: SourceSansPro;
-}
-.header-button:hover {
-	background-color: #7F7F7F;
-	cursor: pointer;
-}
-.header-button-disabled {
-	border: none;
-	color: white;
-	background-color: #3D3D3D;
-	padding: 0px 26px;
-	font-size: 22px;
-	float: left;
-	font-family: SourceSansPro;
-}
-.header-sidekick-links {
-	margin-right: 10em;
-	float: right;
-}
+	.header-sidekick {
+		/*position: sticky;*/
+		top: 0;
+		z-index: 1;
+		margin: -0.5em 0em 2.5em 0em;
+		background-color: #222222;
+	}
+	.header-sidekick-buttons{
+		margin-left: 3.5em;
+		margin-right: auto;
+	}
+	.header-button {
+		border: none;
+		background-color: #000000;
+		color: #EEEEEE;
+		padding: 0px 6px;
+		font-size: 22px;
+		float: left;
+		transition-duration: 0.2s;
+		font-family: SourceSansPro;
+	}
+	.header-button:hover {
+		background-color: #7F7F7F;
+	}
+	.header-button-disabled {
+		border: none;
+		color: white;
+		background-color: #3D3D3D;
+		padding: 0px 6px;
+		font-size: 22px;
+		float: left;
+		font-family: SourceSansPro;
+	}
+	.header-sidekick-links {
+		display: none;
+	}
 
-.main_hr {
-	width: 80%;
-}
-.content-normal-div {
-	margin: 1em 7em 1em 7em;
-}
-.content-quick-link-div {
-	margin: 0em 0em 0em 0em;
-	display: flex;
-}
+	.main_hr {
+		margin: 0px, 50px, 0px, 50px;
+	}
+	.content-normal-div {
+		margin: 0em 1em 0em 1em;
+	}
+	.content-quick-link-div {
+		margin: -0.75em 0em 0em 0em;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
 
-.content-quick-link-box {
-	overflow: clip;
-	text-align: center;
-	margin-left: .4em;
-	margin-right: .4em;
-	padding: .2em;
-	border: .1em;
-	border-color: #EEEEEE;
-	background-color: #444444;
-}
-.content-bio-div {
-	margin: 1em 7em 1em 7em;
-	column-count: 2;
-	column-gap: 2em;
-}
+	.content-quick-link-box {
+		overflow: clip;
+		text-align: center;
+		padding: .4em;
+		border: .3em solid #000000;
+		background-color: #444444;
+	}
+	.content-bio-div {
+		margin: 1em 1em 1em 1em;
+	}
 
-#container-video-reel {
-	width: 500px;
-	padding: 0px;
-	text-align: center;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: -15px;
-	width: 60%;
-}
-#container-disclaimer-text {
-	text-align:center;
-	display: block;
-	color:#EEEEEE;
-	margin-top: 0px;
-	margin-bottom: 0px;
-}
+	#container-video-reel {
+		padding: 0px;
+		text-align: center;
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 0px;
+		width: 95%;
+	}
+	#container-disclaimer-text {
+		text-align:center;
+		display: block;
+		color:#EEEEEE;
+		margin-top: 0px;
+		margin-bottom: 0px;
+	}
 
-.footer-main {
-	text-align: center;
-}
-.footer-links {
-	float: none;
-}
+	.footer-main {
+		text-align: center;
+	}
+	.footer-links {
+		float: none;
+	}
 
-.project-div {
-	margin: 1em 7em 2em 7em;
-	column-count: 2;
-	column-gap: 2em;
-}
-.project-title {
-	margin: 1em 7em 1em 4.6em;
-}
-.project-content-left {
-}
-.project-content-right {
-}
+	.project-div {
+		margin: 1em 4em 2em 4em;
+	}
+	.project-title {
+		margin: 1em 7em 1em 4.6em;
+	}
+	.project-content-left {
+	}
+	.project-content-right {
+	}
 
-.img-reascript-gif {
-	width: 450px;
+	.img-reascript-gif {
+		width: 350px;
+	}
 }
