--- a/mystyle.css
+++ b/mystyle.css
@@ -119,7 +119,6 @@
 		border-color: #555555;
 	}
 
-
 	.header-sidekick {
 		position: sticky;
 		top: 0;
@@ -174,15 +173,17 @@
 		margin: 0em 0em 0em 0em;
 		display: flex;
 	}
-
-	.content-quick-link-box {
-		overflow: clip;
-		text-align: center;
+	.content-quick-link-separator {
 		margin-left: .4em;
 		margin-right: .4em;
 		padding: .2em;
-		border: .1em solid #EEEEEE;
+	}
+	.content-quick-link-box {
+		overflow: clip;
+		text-align: center;
+		border: .1em solid #CCCCCC;
 		background-color: #444444;
+		padding: .3em;
 	}
 	.content-bio-div {
 		margin: 1em 7em 1em 7em;
@@ -384,12 +385,14 @@
 		flex-wrap: wrap;
 		justify-content: center;
 	}
-
+	.content-quick-link-separator {
+		margin: .5em;
+	}
 	.content-quick-link-box {
 		overflow: clip;
 		text-align: center;
 		padding: .4em;
-		border: .3em solid #000000;
+		border: .1em solid #CCCCCC;
 		background-color: #444444;
 	}
 	.content-bio-div {
