--- a/mystyle.css
+++ b/mystyle.css
@@ -80,17 +80,17 @@
 		z-index: 10;
 	}
 	#img-twitter-header {
-		width: 1.1em;
-		padding: .1em .1em 0em .1em;
+		height: 1.02em;
+		margin: 0em 0.05em;
 	}
 	#img-twitter-footer {
-		width: 1.5em;
+		width: 1.65em;
 		padding: .1em .1em 0em .1em;
 		margin: 0em .1em;
 	}
 	#img-linkedin-header {
-		width: 1.1em;
-		padding: .1em .1em 0em .1em;
+		height: 1.1em;
+		margin: 0em 0em 0em 0.15em;
 	}
 	#img-linkedin-footer {
 		width: 1.5em;
@@ -98,20 +98,21 @@
 		margin: 0em .1em;
 	}
 	#img-bandcamp-header {
-		width: 1.1em;
-		padding: .1em .1em 0em .1em;
+		width: 2.35em;
+		margin: 0em 0.05em 0em 0.1em;
+		padding: 0em 0em 0em 0em;
 	}
 	#img-bandcamp-footer {
-		width: 1.5em;
-		padding: .1em .1em 0em .1em;
-		margin: 0em .1em;
+		width: 3em;
+		margin: 0em 0em 0em 0.1em;
+		padding: 0em 0em 0em 0em;
 	}
 	#img-tumblr-header {
-		width: 1.1em;
-		padding: .1em .1em 0em .1em;
+		height: 1.15em;
+		margin: 0em 0.05em;
 	}
 	#img-tumblr-footer {
-		width: 1.5em;
+		width: 0.95em;
 		padding: .1em .1em 0em .1em;
 		margin: 0em .1em;
 	}
@@ -140,7 +141,6 @@
 		margin: -1.25em 0em 3em 13.5em;
 	}
 	.header-sidekick-buttons{
-		width:70%;
 	}
 	.header-button {
 		border: none;
@@ -342,20 +342,24 @@
 		padding: .4em;
 	}
 	#img-twitter-footer {
-		width: 1.75em;
-		padding: 0em .1em 0em .1em;
+		width: 1.65em;
+		padding: .1em .1em 0em .1em;
+		margin: 0em .1em;
 	}
 	#img-linkedin-footer {
-		width: 1.75em;
-		padding: 0em .1em 0em .1em;
+		width: 1.5em;
+		padding: .1em .1em 0em .1em;
+		margin: 0em .1em;
 	}
 	#img-bandcamp-footer {
-		width: 1.75em;
-		padding: 0em .1em 0em .1em;
+		width: 3em;
+		margin: 0em 0em 0em 0.1em;
+		padding: 0em 0em 0em 0em;
 	}
 	#img-tumblr-footer {
-		width: 1.75em;
-		padding: 0em .1em 0em .1em;
+		width: 0.95em;
+		padding: .1em .1em 0em .1em;
+		margin: 0em .1em;
 	}
 	#img-quicklink-prev {
 		width: 8em;
@@ -383,8 +387,8 @@
 		height: 28px;
 	}
 	.header-sidekick-buttons{
-		margin-left: 3.9em;
-		margin-right: auto;
+		margin-right: 0em 0em 0em 0em;
+		float: right;
 	}
 	.header-button {
 		border: none;
