--- a/mystyle.css
+++ b/mystyle.css
@@ -363,9 +363,8 @@
 	}
 	#img-quicklink-prev {
 		width: 8em;
-		padding: .1em .1em .1em .1em;
-		border: 10px;
-		border-color: #555555;
+		margin: .1em .1em .1em .1em;
+		border: 2px solid #4B4B4B;
 	}
 	#img-bio {
 		width: 15em;
