--- a/mystyle.css
+++ b/mystyle.css
@@ -129,7 +129,9 @@
 		width: 15em;
 		margin: 1em .1em 1em .1em;
 		border: 4px solid #4B4B4B;
-		float: right;
+		display: flex;
+		align-items: center;
+		justify-content: right;
 	}
 	.header-sidekick {
 		position: sticky;
@@ -183,8 +185,10 @@
 		margin: 1em 7em 1em 7em;
 	}
 	.content-quick-link-div {
-		margin: 0em 0em 0em 0em;
+		margin: 0em auto 0em auto;
 		display: flex;
+		align-items: center;
+		justify-content: center;
 	}
 	.content-quick-link-separator {
 		margin-left: .4em;
@@ -379,6 +383,7 @@
 		margin: 1em .1em 1em .1em;
 		border: 4px solid #4B4B4B;
 		align-items: center;
+		justify-content: center;
 	}
 	.header-sidekick {
 		position: sticky;
@@ -433,6 +438,7 @@
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
+		align-items: center;
 	}
 	.content-quick-link-separator {
 		margin: .5em;
@@ -446,6 +452,10 @@
 	}
 	.content-bio-div {
 		margin: 1em 1em 1em 1em;
+	}
+	.content-bio-div-left {
+	}
+	.content-bio-div-right {
 	}
 	#container-video-reel {
 		padding: 0px;
