--- a/mystyle.css
+++ b/mystyle.css
@@ -249,6 +249,12 @@
 		width: var(--div-width);
 		height: calc(var(--div-width) * 9 / 16);
 	}
+	.project-slideshow-embed {
+		--div-width: 500px;
+		width: var(--div-width);
+		height: calc(var(--div-width) * 9 / 16);
+		margin-bottom: 1em;
+	}
 	.project-bandcamp-embed {
 		border: 0;
 		width: 100%;
@@ -271,6 +277,7 @@
 		font-family: SourceSansPro;
 		display: flex;
 		align-items: center;
+		margin-right: 1em;
 	}
 	.download-button:hover {
 		background-color: #7F7F7F;
@@ -492,6 +499,11 @@
 		width: 100%;
 	}
 	.project-video-embed {
+		width: 100%;
+		height: 200px;
+		margin: 1.0em 0em 0.5em 0em;
+	}
+	.project-slideshow-embed {
 		width: 100%;
 		height: 200px;
 		margin: 1.0em 0em 0.5em 0em;
