Added Dynamic L/R Main Margins
Made a change that makes the browser calculate the side margins with some more thought (mainly it pushes them to negative values when the main content div doesn't want to squish any further). This allows the site to reasonably fit within half of a 1920 x 1080 screen (960px wide) and not require scrolling left/right, although some iframes don't scale appropriately.

--- a/mystyle.css
+++ b/mystyle.css
@@ -14,6 +14,9 @@
 	  background-color:#000000;
 	  font-family: SourceSansPro;
 	  font-size: 20px;
+	  max-width: 1600px;
+	  min-width: 1110px;
+	  margin: 8px min(0px,((100% - 1110px) / 2)) 8px min(0px,((100% - 1110px) / 2));
 	}
 	h1 {
 	  color:#EEEEEE;
@@ -48,7 +51,7 @@
 	.content {
 		max-width: 1600px;
 		margin: auto;
-		min-width:1110px;
+		min-width:1120px;
 		width: auto !important;/* Firefox will set width as auto */
 		width:1110px;          /* As IE6 ignores !important it will set width as 1100px; */
 	}
