--- a/mystyle.css
+++ b/mystyle.css
@@ -6,7 +6,7 @@
 
 
 /*Desktop Formatting*/
-@media (min-width: 610px) {
+@media (min-width: 875px) {
 	body {
 	  background-color:#000000;
 	  font-family: SourceSansPro;
@@ -340,6 +340,274 @@
 	}
 	#img-reaper-logo {
 		margin: -40px 0px 0px 0px;
+	}
+}
+
+/****************************/
+/****************************/
+
+/*Tablet Formatting*/
+@media (max-width: 874px) and (min-width: 610px) {
+	body {
+	  background-color:#000000;
+	  font-family: SourceSansPro;
+	  font-size: 18px;
+	  color:#EEEEEE;
+	}
+	h1 {
+	  color:#EEEEEE;
+	  margin-left: 12px;
+	  margin-bottom: -6px;
+	  font-family: Quando;
+	  font-size: 1.9em;
+	}
+	h2 {
+		color:#EEEEEE;
+		font-family: Quando;
+		font-size: 1.5em;
+	}
+	h3 {
+		color:#EEEEEE;
+		font-family: Montserrat;
+		font-size: 1.4em;
+	}
+	h4 {
+		color:#EEEEEE;
+		font-family: SourceSansPro-Light;
+		font-size: 1.2em;
+		margin-top: 0em;
+		margin-bottom: 0em;
+	}
+	h6 {
+		font-family: SourceSansPro;
+		font-size: .65em;
+		font-weight: normal;
+		margin: -8px 0px 12px 0px;
+	}
+	ul {
+		margin: 3px 0px 15px -20px;
+	}
+	p {
+		color:#EEEEEE;
+	}
+	.content {
+		margin: auto;
+		width: auto !important;/* Firefox will set width as auto */
+	}
+	.undecorated-links {
+		text-decoration:none;
+	}
+	.decorated-links {
+		color: #EEEEEE;
+		text-decoration:underline solid #EEEEEE 1px;
+	}
+	.header-hero {
+		top: 0;
+		background-color: #000000;
+		display: flex;
+		margin: 0em auto 0em 0em;
+		align-items: center;
+	}
+	.header-hero-text-and-div {
+		width: 100%;
+	}
+	#container-header-text {
+		display: normal;
+		align-items: flex-start;
+		color: #FFFFFF;
+	}
+	#container-header-hr {
+		color: #D9D9D9;
+		margin-right: .5em;
+	}
+	#img-home {
+		margin-left: 0em;
+		margin-top: .5em;
+		width: 4em;
+		padding: .4em;
+	}
+	#img-twitter-footer {
+		width: 1.65em;
+		padding: .1em .1em 0em .1em;
+		margin: 0em .1em;
+	}
+	#img-linkedin-footer {
+		width: 1.5em;
+		padding: .1em .1em 0em .1em;
+		margin: 0em .1em;
+	}
+	#img-bandcamp-footer {
+		width: 3em;
+		margin: 0em 0em 0em 0.1em;
+		padding: 0em 0em 0em 0em;
+	}
+	#img-tumblr-footer {
+		width: 0.95em;
+		padding: .1em .1em 0em .1em;
+		margin: 0em .1em;
+	}
+	#img-quicklink-prev {
+		width: 8em;
+		margin: .1em .1em .1em .1em;
+		border: 2px solid #4B4B4B;
+	}
+	#img-bio {
+		width: 15em;
+		margin: 1em .1em 1em .1em;
+		border: 4px solid #4B4B4B;
+		align-items: center;
+		justify-content: center;
+	}
+	.header-sidekick {
+		position: sticky;
+		top: 0;
+		z-index: 1;
+		margin: -0.46em 0em 0em 0em;
+		background-color: #000000;
+	}
+	.header-sidekick-background {
+		position: sticky;
+		z-index: 0;
+		color: #000000;
+		height: 28px;
+	}
+	.header-sidekick-buttons{
+		margin-right: 0em 0em 0em 0em;
+		float: right;
+	}
+	.header-button {
+		border: none;
+		background-color: #000000;
+		color: #EEEEEE;
+		padding: 0px 6px;
+		font-size: 22px;
+		float: left;
+		transition-duration: 0.2s;
+		font-family: SourceSansPro;
+	}
+	.header-button:hover {
+		background-color: #7F7F7F;
+	}
+	.header-button-disabled {
+		border: none;
+		color: white;
+		background-color: #3D3D3D;
+		padding: 0px 6px;
+		font-size: 22px;
+		float: left;
+		font-family: SourceSansPro;
+	}
+	.header-sidekick-links {
+		display: none;
+	}
+	.main_hr {
+		margin: 0px, 50px, 0px, 50px;
+	}
+	.minor_hr {
+		margin: 0px, 50px, 0px, 50px;
+	}
+	.content-quicklinks-group-div {
+		margin: 0em 1em 0em 1em;
+	}
+	.content-quick-link-div {
+		margin: -0.75em 0em 0em 0em;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: center;
+	}
+	.content-quick-link-separator {
+		margin: .5em;
+	}
+	.content-quick-link-box {
+		overflow: clip;
+		text-align: center;
+		padding: .2em;
+		border: .1em solid #CCCCCC;
+		background-color: #444444;
+	}
+	.content-bio-div {
+		margin: 1em 1em 1em 1em;
+	}
+	.content-bio-text {
+	}
+	.content-bio-img {
+	}
+	.content-bio-favgames-div {
+		margin: 1em 1em 1em 1em;
+	}
+	#container-video-reel {
+		padding: 0px;
+		text-align: center;
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 0px;
+		width: 95%;
+	}
+	#container-disclaimer-text {
+		text-align:center;
+		display: block;
+		color:#EEEEEE;
+		margin-top: 0px;
+		margin-bottom: 0px;
+	}
+	.footer-main {
+		text-align: center;
+	}
+	.footer-links {
+		float: none;
+	}
+	.project-div {
+		margin: 1em 1em 2em 1em;
+	}
+	.project-title {
+		margin: 16px 16px 16px 16px;
+	}
+	.project-content-left {
+		width: 100%;
+	}
+	.project-content-right {
+		width: 100%;
+	}
+	.project-video-embed {
+		width: 100%;
+		height: 200px;
+		margin: 1.0em 0em 0.5em 0em;
+	}
+	.project-slideshow-embed {
+		width: 100%;
+		height: 200px;
+		margin: 1.0em 0em 0.5em 0em;
+	}
+	.project-bandcamp-embed {
+		border: 0;
+		width: 100%;
+		height: 120px;
+		margin: 0em 0em 0em 0em
+	}
+	#roboxing-bandcamp {
+		margin-top: 0.5em;
+	}
+	#img-arte-lumiere {
+		width: 100%;
+	}
+	.download-button {
+		border: 1px solid #4B4B4B;
+		background-color: #333333;
+		color: #EEEEEE;
+		padding: 1px 7px;
+		font-size: 22px;
+		transition-duration: 0.2s;
+		font-family: SourceSansPro;
+		align-items: center;
+	}
+	.download-button:hover {
+		background-color: #7F7F7F;
+	}
+	.img-reascript-gif {
+		width: 100%;
+		margin-top: 0.4em;
 	}
 }
 
